Fix "thanks" text laying on top of normal text even if not visible

--- a/scss/feed.scss
+++ b/scss/feed.scss
@@ -56,6 +56,7 @@
 	
 	&:hover span, &:hover + .thanks {
 		opacity: 1;
+		z-index: 100;
 	}
 }
 
@@ -64,12 +65,12 @@
 	top: 20%;
 	right: 10%;
 	font-size: 80px;
-	z-index: 100000;
+	z-index: -10;
 	
 	transform: rotate(-10deg);
 	
 	opacity: 0;
-	transition: opacity 0.2s ease-in-out;
+	transition: opacity 0.2s ease-in-out, z-index 0.2s ease-in-out;
 	
 	text-shadow: #444 0 0 15px;
 }
